--- a/scene/one/elephant-charter/index.html
+++ b/scene/one/elephant-charter/index.html
@@ -250,7 +250,7 @@
         <p class="linebreak">Elephants exhibit an interest in their own lives and empathy for those to whom they are attached. They have an intrinsic right to experience a life of well-being. Through human imagination and our scientific and creative abilities, we can and must curb our demand for the natural resources of the planet and, wherever possible, reduce our reliance on cruel and invasive elephant management practices. We harm and deprive elephants when through interventive management practices we deny them the opportunity for social learning. We must protect their highly social character and allow elephants to acquire the full range of elephant behavior in a normal social context. We damage the fabric of elephant society when we remove older individuals. Our management of wild elephants must reflect the importance of older males and females in maintaining the integrity of elephant society. We have an obligation to maintain the integrity of ecosystems that elephants inhabit, and must take realistic account of the needs of elephants in the planning and management of protected areas and landscapes.</p>
 
         <p class="linebreak">Official publication of <em>The Elephant Charter</em>&nbsp;: <a href="../../../url/-info/theelephantcharter/" title="The Elephant Charter" target="_blank" rel="noopener">theelephantcharter.info</a></p>
-        <p>More about the author, Joyce Poole et al.: <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">elephantvoices.org</a></p>
+        <p>More about the author, Joyce Poole et al: <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">elephantvoices.org</a></p>
       </div>
 
       <div class="clear">
