--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -46,7 +46,7 @@
         <h2 class="scene-one">Elephants Without Borders</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
-        <p class="linebreak"><em>Botswana has the largest number of savanna elephants in Africa today. While most African elephant populations have decreased due to poaching, urban expansion and landscape fragmentation, the elephant population in an around 115,000 square kilometres range in northern Botswana has remained stable.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al., 2017">1</a>]</sup></p>
+        <p class="linebreak"><em>Botswana has the largest number of savanna elephants in Africa today. While most African elephant populations have decreased due to poaching, urban expansion and landscape fragmentation, the elephant population in and around 115,000 square kilometres range in northern Botswana has remained stable.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al, 2017">1</a>]</sup></p>
 
         <p class="linebreak"><em>Botswana is now home to around 130,000 elephants<!-- (and potential home range range for up to 200,000 elephants)-->. This is more than 33 per cent of the current savanna elephant population. That is in sharp contrast to less than three per cent of the African savanna elephants living in Botswana fifty years ago. Plummeting elephant populations elsewhere and the safety provided by Botswana has attracted a steady migration from neighboring countries, where expanding rural communities and rising poaching levels are putting regional elephants under increased pressure and stress.</em></p>
 
@@ -94,7 +94,7 @@
         <h3>Kavango-Zambezi</h3>
         <p>The elephant population in northern Botswana forms part of a continuous elephant population within southern Africa, as individuals move between bordering countries: Zimbabwe, Zambia, Namibia and until recently, through to Angola. These countries comprise the Kavango-Zambezi Transfrontier Conservation Area (KAZA TFCA), one of the largest conservation areas in the world. Now, there is an increased urgency for those neighboring countries to open protected corridors so herds can return to their traditional ranges.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
-        <p class="linebreak">The reality is that elephants share the landscape with an ever-increasing human population. The result is more frequent incidents of human-elephant conflict. This conflict reflects competition not only for resources such as water and vegetation, but also for space, especially as an estimated 78 per cent of the elephant range occurs outside of national parks.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
+        <p class="linebreak">The reality is that elephants share the landscape with an ever-increasing human population. This conflict reflects competition not only for resources such as water and vegetation, but also for space, especially as an estimated 78 per cent of the elephant range occurs outside of national parks. The result is more frequent incidents of human-elephant conflict.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
       </div>
 
@@ -103,7 +103,7 @@
       </div>
 
       <div>
-        <p>Elephant movements in (and out of) northern Botswana are long-range, temporally complicated, seasonally variable, and closely linked with rainfall.<sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al., 2005">3</a>]</sup></p>
+        <p>Elephant movements in (and out of) northern Botswana are long-range, temporally complicated, seasonally variable, and closely linked with rainfall.<sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al, 2005">3</a>]</sup></p>
 
         <p class="linebreak">Elephants numbers in Botswana are in sharp contrast with numbers in Angola, which has fewer than 4,000 elephants in a fertile country almost double the size of Botswana. The contrast is similar with Zambia, which has only around 22,000 elephants. Yet both Zambia and Angola have vast tracks of traditional elephant habitat lying dormant and underutilized. This unbalance holds an answer to any question of whether or not Botswana can sustain its current elephant population.</p>
 
@@ -116,7 +116,7 @@
 
       <div>
         <h3>Botswana Without Borders</h3>
-        <p>By 2007, Michael Chase and Kelly Landen had co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the Kavango-Zambezi Transfrontier Conservation Area&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
+        <p>By 2007, Michael Chase and Kelly Landen co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the Kavango-Zambezi Transfrontier Conservation Area&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
 
         <p class="linebreak">By 2011, an aerial survey commissioned by the Botswana department of wildlife and national parks, conceptualized and led by Michael Chase and Kelly Landen of Elephants Without Borders, &ldquo;[made evident] a catastrophic loss of wildlife,&rdquo; according to Chase, eleven species were in serious decline in the delta. The declines were a result of a complex mix of local causes: human encroachment, game fences and poaching, fires and drought and so on. Elephants, however, were bucking the trend. Chase had an explanation:</p>
 
@@ -179,7 +179,7 @@
 
         </div>
 
-        <p>The real solution is to allow these elephants safe passage to past, now underutilized home ranges in Angola, Zambia and Zimbabwe, and safe passage back to Botswana with the change of season. The solution is to protect the wild places in the Kavango-Zambezi area for elephants. This solution calls for a reconsidered land management plan in Caprivi. This solution requires the recreation and preservation of wildlife corridors across Botswana's northern border and throughout managed farmland and so on. This solution has the potential to spark a tourism industry that can benefit local communities with revenue and employment in all five KAZA countries. Today, the future of elephants in Botswana is once again up for debate and this time there is a far reaching implication for the future of elephants in Africa.</p>
+        <p>The real solution is to allow these elephants safe passage to past, now underutilized, home ranges in Angola, Zambia and Zimbabwe, and safe passage back to Botswana with the change of season. The solution is to protect the wild places in the Kavango-Zambezi area for elephants. This solution calls for a reconsidered land management plan in Caprivi. This solution requires the recreation and preservation of wildlife corridors across Botswana's northern border and throughout managed farmland and so on. This solution has the potential to spark a tourism industry that can benefit local communities with revenue and employment in all five KAZA countries. Today, the future of elephants in Botswana is once again up for debate and this time there is a far reaching implication for the future of elephants in Africa.</p>
 
         <p class="linebreak">We recognize the data collected by EWB as a fundamental support structure for elephant conservation in Botswana and across the continent. <font class="color">Animat Habitat has named <a class="color" href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a> (EWB) as an official selection to receive a percentage of revenue from scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground (and in the air) in Africa.</p>
 
