--- a/scene/one/elephant-history/index.html
+++ b/scene/one/elephant-history/index.html
@@ -86,13 +86,13 @@
 
       <div>
         <h3>A Zombie History of Elephants</h3>
-        <p>Elephants become so big, however they are known to not be prone to cancer. (Cancer is a disease of cell growth.) Being so big, elephants have to grow a lot of cells in particular in comparison sion to its most closely related &ndash; and much smaller &ndash; species: hyraxes and manatees.<sup>[<a class="button" onclick="fn_2();" title="Kellogg et al. a. 6.">6</a>]</sup></p>
+        <p>Elephants become so big, however they are known to not be prone to cancer. (Cancer is a disease of cell growth.) Being so big, elephants have to grow a lot of cells in particular in comparison sion to its most closely related &ndash; and much smaller &ndash; species: hyraxes and manatees.<sup>[<a class="button" onclick="fn_2();" title="Kellogg et al, 2007">6</a>]</sup></p>
 
         <p class="linebreak">Well, manatees are big but not <em>elephantine</em>.</p>
 
         <p class="linebreak">This apparent conflict in principle knowledge of growth and cancerous growth has led to an area of scientific research into elephants for an answer to cancer.</p>
 
-        <p class="linebreak">Results published in August of 2018 indicate that elephants have extra copies of a key tumour-suppressor gene, named: TP53 or LIF(6). This acts as a &ldquo;zombie&rdquo; gene, which surveys cells for oxidated stresses &ndash; or damaged DNA &ndash; and therein programs a timer to self-destruct, with a chance for the cell to self-repair &ndash; or else. The nickname: &ldquo;zombie&rdquo;, is given because, ancestrally, these extra copies of LIF(6) genes are turned off, whereas elephants have uniquely evolved to allow this dead gene to come back to life and cause the death of other (cancerous) cells. This has been an effective solution for suppressing cancer in elephants.<sup>[<a class="button" onclick="fn_2();" title="Vazquez et al.">7</a>]</sup></p>
+        <p class="linebreak">Results published in August of 2018 indicate that elephants have extra copies of a key tumour-suppressor gene, named: TP53 or LIF(6). This acts as a &ldquo;zombie&rdquo; gene, which surveys cells for oxidated stresses &ndash; or damaged DNA &ndash; and therein programs a timer to self-destruct, with a chance for the cell to self-repair &ndash; or else. The nickname: &ldquo;zombie&rdquo;, is given because, ancestrally, these extra copies of LIF(6) genes are turned off, whereas elephants have uniquely evolved to allow this dead gene to come back to life and cause the death of other (cancerous) cells. This has been an effective solution for suppressing cancer in elephants.<sup>[<a class="button" onclick="fn_2();" title="Vazquez et al, 2018">7</a>]</sup></p>
 
         <p class="linebreak">This phenomenon is known to occur in whales as well, partially explaining their ability to grow so big.</p>
 
