--- a/scene/two/the-forest-behind-the-trees/index.html
+++ b/scene/two/the-forest-behind-the-trees/index.html
@@ -53,7 +53,7 @@
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>I was interested in the distinction between trees as well as the mass of the form and color. I went back to Naturalism, but kept the Impressionism and Cubism as underlying concepts for picture ideas.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, on the subject of Andrew Wyeth works at the Albright-Knox Gallery in Buffalo, New York, <em>Robert Bateman: An Artist in Nature</em> (1990) Madison Press Books</font></h4>
 
-        <!--  essay by Rick Archibold: &lsquo;An Ecological Artist&rsquo; -->
+        <!-- essay by Rick Archibold: &lsquo;An Ecological Artist&rsquo; -->
 
       </div>
 
@@ -92,10 +92,6 @@
         <p>This contrast was cited in an essay titled &lsquo;An Ecological Artist&rsquo; in the book titled <em>Robert Bateman: An Artist in Nature</em> (1990) written by Rick Archibold. Archibold concludes in the essay how these two painters differed in their representation of time: &ldquo;Wyeth makes time stand still. Bateman highlights its fleeting quality.&rdquo; A moment later all the animals may be gone.<sup>&nbsp;[<a class="button" onclick="fn();" title="Archibold, 1990.">2</a>]</sup></p>
 
         <p class="linebreak">While Bob Bateman is known for his paintings of animals, there is great attention to detail in the landscapes for those animals as well. In many paintings any animals are peripheral to the composition or almost imperceptible. A principle for Naturalist paintings, which I credit to Bob and I apply to my compositions, is that either the habitat or the animal takes precedence. Not both. When a message has a focus, its image has a focal point. Then almost every Naturalist painting becomes an exploration of nature, with a perceived pattern of color and shape.</p>
-
-        <!-- “Bateman captures a moment in time, a moment that could have happened, but did not.” -  -->
-        <!-- YouTube Series of Bateman talks ?? -->
-        <!-- — Roger Tory Peterson -->
 
       </div>
 
@@ -142,10 +138,6 @@
 
         <p class="linebreak">For example the Abstract Expressionist Franz Kline was famous for bold calligraphic brush strokes projected onto white canvas. Abstract expressions of dark and light, like his, were reduced to a simple statement. However, paintings like these were renewed as an inspired trove for pictorial composition in many of the art movements that proceeded that of mid-twentieth century New York.</p>
 
-        <!-- Working in black and white brings an artist to the essentials of line, shape and form. -->
-
-        <!-- Seeing a painting and being able to tell where the light is coming from. -->
-
       </div>
 
       <div class="color quote">
@@ -157,20 +149,14 @@
         <img alt="" src="https://animathabitat.com/inc/img/~02/art/franz-kline/kline.le-gros.1961.jpg" />
         <p class="text-right gutter-side"><em>Le Gros</em> (1961) by Franz Kline [<a href="../../../url/www/moma-franz-kline/" rel="noopener" target="_blank" title="The Museum of Modern Art / Artist / Franz Kline">moma.org</a>]</p>
 
-        <!-- <em>Untitled</em> (1969) by Mark Rothko -->
-        <!-- Collection of Kate Rothko Prizel -->
-
       </div>
 
       <div>
         <p>This extreme of Abstract Expressionism is reminiscent of Chinese or Japanese calligraphy. Like the art of calligraphy, the texture of the brush strokes in Abstract Expressionist and Abstract Impressionist art has an intentionality. The thickness of the paint medium and the weight of each stroke adds a directional, textural aesthetic. These pronounced qualities almost preserve a record of movement in space and time. Like timelapse photography, there is an impression of motion. These paintings are often referred to as action paintings because the layered, textured appearance characterizes the painter in motion in front of the canvas.<sup>&nbsp;[<a class="button" onclick="fn();" title="D'Augustine, 2010.">3</a>]</sup></p>
 
         <p class="linebreak">I look to appropriate these painterly aesthetics into a selection of studio works with cold wax and other impasto mediums and so on.</p>
-        <!-- The texture contributes to a painting only where the brush strokes have an intentionality, and where that intent has a point of focus. -->
 
         <p class="linebreak">As part of <a href="../the-beginning-of-painting/" title="Animat Habitat scene two. The Beginning of Painting.">The Beginning of Painting</a> at Animat Habitat &ndash; building up to an oil painting of a tiger in the taiga &ndash; other works are underway. Of note is a diptych based on an abstract black-and-white pattern of vertical stripes. The stripes are mostly birch trees. The pattern of white trees and the spaces in-between will comprise the composition. The diptych is titled <em>White Birch</em>&mdash;an oil painting of a moose and a yellow-bellied sapsucker in the shade of a paper birch forest.</p>
-
-        <!-- A Naturalist aesthetic will fill in the details within a shallow depth of field, bringing select elements of the painting into focus. -->
 
         <p class="linebreak"><em>A low, diffuse light dimly reflects the white bark of paper birch trees on the fringes of the foreground. The light does not reach far into the forest&mdash;into the distance of the picture. The resulting picture is a pattern of dark and light with spaces where wildlife will blend in-between. A moose meanders through a shadowy mist at dawn. A sapsucker mulls over a spot to start the day. However, the animals in this picture are peripheral to the habitat. The forest habitat as a whole is the focus. The pattern of the trees.</em></p>
 
@@ -221,9 +207,6 @@
 
         <p><em>The message is not the only reason to paint a painting.</em> Any painting can be a work of art. An impasto painting has the physicality to stand on its own aesthetic. For a Naturalist painter, however, the message is rarely far from the surface. For Robert Bateman, each painting in a way preserves a piece of a disappearing world. Bob concluded his &lsquo;Artist's Statement&rsquo; in his <em>new</em> book <em>New Works</em> (2010):</p>
 
-        <!-- It is also clear that the dangers that threaten our world are not only real but increasing, and my concern makes its way into my art.
-        “For me the preservation and celebration of the natural world is a continual concern, and it is the underlying motive for virtually all of my art.” — Robert Bateman, one of his most quoted utterances, An Artist in Nature (1990) -->
-
         <div>
           <p><b class="color">&ldquo;</b>Perhaps, in some small way, I can raise the public consciousness about the value of those things that are vanishing and encourage people to protect our world for the future.<b class="color">&rdquo;</b></p>
 
@@ -234,8 +217,6 @@
 
         <p class="linebreak">Atmosphere is about space and the feeling of depth within that space. In a Naturalist painting there is depiction of the air&mdash;the vast volumes into the distance, the spaces between the trees, and the pathways through clumps of grass and so on.</p>
 
-        <!-- , like looking to an overcast sky to tell time is a little less apparant -->
-
         <p class="linebreak">Indeed this relates to painting birch trees in a morning mist. And indeed there is a painting of a birch forest as part of <em>the beginning of painting</em> at Animat Habitat. The feature painting for scene two at Animat Habitat, however, is made to tell the story of another forest: the taiga.</p>
 
         <p class="linebreak">The boreal forest&mdash;the forest that dominates the far north, extending from Russia, across Europe, to North America is called the taiga where the Amur tiger is concerned. &ldquo;During the winter,&rdquo; as narrates Sir David Attenborough in the 2019 nature documentary mini-series <em>Our Planet</em>, in its episode titled &lsquo;Forests&rsquo;, which shows the taiga in winter, &ldquo;the days are so short and the temperatures are so low that growth is at a standstill.&rdquo; That far north, the forest supports very few animals. In that part of Siberia, one species of tree sustains all life. The pine tree. If the pine trees fail to fruit in season, deer and boar &ndash; any prey for a tiger &ndash; will move on.</p>
@@ -244,25 +225,18 @@
 
       <div class="color quote">
 
-        <!-- The boreal forest&mdash;the forest that dominates the far north. [&hellip;]  -->
-
         <h4><font class="color text-quote">&ldquo;</font><em>This is the home of an animal so rare, it is almost mythical. An Amur tiger. There are less than six-hundred of them. [&hellip;] A male Siberian tiger patrols a territory of almost two-thousand square kilometres, and it has to do so if it is to find enough prey to keep itself alive through the long winter. This is an impoverished land, where food of any kind is scarce. [&hellip;] Poaching has taken the Siberian tiger to the brink of extinction, but since the 1980s their numbers have slowly increased. [Their] future still depends on having vast areas of forest in which to hunt.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, <em>Our Planet</em> e/8: &lsquo;Forests&rsquo; (2019) Netflix</font></h4>
 
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/photo/kieran-o-donovan/silverback-films.our-planet.8.forests.2019.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~02/photo/~kieran-o-donovan/silverback-films.our-planet.8.forests.2019.jpg" />
         <p class="text-right gutter-side">&lsquo;Amur tiger caught on camera trap in the boreal forests of Russia's Pacific Coast&rsquo; by Kieran O'Donovan, <em>Our Planet</em> e/8: &lsquo;Forests&rsquo; (2019) &copy; Silverback Films, Netflix [<a href="../../../url/www/ourplanet/" rel="noopener" target="_blank" title="Our Planet (2019)">ourplanet.com</a>]</p>
 
       </div>
 
       <div>
         <p>Forests on earth and in the sea are our most precious natural resource. The boreal forest is estimated to hold hundreds of billions of trees with more than forty per cent of the carbon stored on Earth. Our forests are a fundamental element in the fight against climate change.<sup>&nbsp;[<a class="button" onclick="fn();" title="Attenborough, 2019.">5</a>]</sup></p>
-
-        <!-- ... compared to the rainforests of the tropics. Many are dependent on the supplements to be found in its rivers. -->
-
-        <!-- &ndash; and I include kelp forests and coral reefs &ndash; -->
-        <!-- &ndash; on earth and in the sea &ndash; -->
 
         <p class="linebreak">In his book of &lsquo;Plates and Commentaries&rsquo; published in 1990, <em>Robert Bateman: An Artist in Nature</em>, Bateman forewarned the importance of forests in the twenty-first century:</p>
 
@@ -278,8 +252,6 @@
 
         <p class="linebreak">The problem however is with the economics and politics, not the logistics of planting trees. There is a problem with the extractive, myopic economic models of industrial aggriculture and industrial forestry and so on. And then there is the problem where in practice, and in policy, the environmental costs are too often overlooked.</p>
 
-        <!-- that has only looked like good business on paper &ndash; so to speak -->
-
         <p class="linebreak">Our best step forward is to stop cutting down the healthy forests that we have left. This means law enforcement needs to put and end to illegal logging, and consumers with purchasing power need to boycott the companies that are driving deforestation. Also, we &ndash; and our political representatives &ndash; need to steward the rights of Indigenous peoples who have a history of being stewards of the natural world. And where there is opportunity for reforestation, local communities need to see benefits from any new forests because they will need to be invested in keeping those trees growing.</p>
 
       </div>
@@ -289,10 +261,11 @@
 
       </div> -->
 
-      <!-- <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>I am quite seriously proposing that we give legal rights to forests, oceans, rivers and other so called natural objects in the environment, indeed to the natural environment. [&hellip;] If forests, oceans and rivers possessed standing, court approved [&hellip;] guardians would represent the interest of the natural objects, and the court would award any compensation to the object itself, perhaps in the form of funds for restoration. [&hellip;] Legal standing for natural objects [&hellip;] would allow their human advocates to spell out the consequences of such limitations and elevate those consequences in the eyes of the courts and the public.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Stone’s argument, <em>Should trees have standing?</em> cited by Douglas in the Law Review, by Design ?</font></h4>
+      <div class="clear">
+        <img alt="" src="https://animathabitat.com/inc/img/~02/photo/the-globe-and-mail.canada.boreal-forest.jpg" />
+        <p class="text-right gutter-side">&lsquo;Canada's boreal forest&rsquo; [<a href="../../../url/www/theglobeandmail-canadas-boreal-forest/" rel="noopener" target="_blank" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)">theglobeandmail.com</a>]</p>
 
-      </div> -->
+      </div>
 
       <div class="clear">
 
@@ -302,6 +275,13 @@
           <p class="small"><sup>3</sup> D'Augustine, Corey. <em>In the Studio</em> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/yt/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video Link</a></p>
           <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/www/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>5</sup> O'Donovan, Kieran. <em>Our Planet</em> (2019) Silverback Films, Netfilx <a href="../../../url/www/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website Link</a></p>
+
+          <!-- YouTube Series of Bateman talks ?? -->
+
+          <!-- “Bateman captures a moment in time, a moment that could have happened, but did not.” -->
+          <!-- Roger Tory Peterson ?? -->
+          
+          <!-- The Globe And Mail ?? -->
 
         </div>
       </div>
